@@ -1,23 +1,7 @@
-DIST AdbeRdr9.1.0-1_i486linux_deu.tar.bz2 65582142 RMD160 3ea46faa96044091b45e1475717951cfb486d8f0 SHA1 b24e99b01c0467264c0e08edb7ad51adec0af997 SHA256 e7425ae941bbbd3180da6651aab2c972cd5a64b32d3cfdb503d5b1cb656920e8
-DIST AdbeRdr9.1.0-1_i486linux_enu.tar.bz2 60093913 RMD160 832a28e9572e55dce5f24568d80356ac990bd3c3 SHA1 f0338abdfe795d7c055d5f9ce034530371a3550e SHA256 c783b6cdb15a30ad9eecd5df950346e9e0eabeac03c155af1b62d5772bb53e52
-DIST AdbeRdr9.1.0-1_i486linux_fra.tar.bz2 64400127 RMD160 7cf972c1261b9d6e0ce87f2fb86feac3803af82b SHA1 1db38bd5bc9add95f935107325739f9917aaf871 SHA256 83f2c902d1c37a4fb912ba3b1857e249b8ab01f18915ab632337ee168d0e4e48
-DIST AdbeRdr9.1.0-1_i486linux_jpn.tar.bz2 68330982 RMD160 5646d5c7ae805f845711d2067b3e70985c056438 SHA1 6858c1e65fff6ed116dc73970c9811f4d42c6c73 SHA256 8759f6b8ada68ab27a50de15136a680494db7cba18e6b77f5a5e0acb81dd09a7
-DIST AdobeReader_chs-8.1.3-1.i486.tar.bz2 58116554 RMD160 b1bf4b1f0a73393c9f80f5f455feac493e93c192 SHA1 f1a8843ad164e4494f2c03ad3605c3ca0b9c5072 SHA256 7259e3e99fc9823ce396471a2029155197e0d76973385e4809a34aedf233c5b7
-DIST AdobeReader_cht-8.1.3-1.i486.tar.bz2 54038920 RMD160 017b56f0724d1e87c147c5741a86b5eea8048557 SHA1 3f6399b1772e8a001c117345d456f658c21f2c73 SHA256 0d2939c87bc463b5726267ebe575baf5c41902953c85c8af8005039aac644f22
-DIST AdobeReader_dan-8.1.3-1.i486.tar.bz2 49621130 RMD160 19b5d8919fd40e25e3acacad7ae6c760333c507f SHA1 1a59a443687dafa09b1351a5a6c2ea91b7b99a26 SHA256 a64a1064afe6cf62af9a1d85e831387c86e3365225c6c780f1a1e42b159299ea
-DIST AdobeReader_deu-8.1.3-1.i486.tar.bz2 50289693 RMD160 9324f31f9388b849bc580b8963bc55a6391f75c1 SHA1 e383036f519d430191f0c908f7818df7593383c8 SHA256 816c7d270a676e84ea9cb220a1ef6bb5d999c4217258c65ebb3cda5d56de90e4
-DIST AdobeReader_enu-8.1.3-1.i486.tar.bz2 47013781 RMD160 d5dbaccb84305101081c6c53a3e53754a3a77f34 SHA1 8abbe77246539300e8594603418294c677abfbe6 SHA256 77ae5a11daa3d220d4609cd055d5f937b0228c227a177e5ed338c69892ff032a
-DIST AdobeReader_esp-8.1.3-1.i486.tar.bz2 49588000 RMD160 3b715e5d508af5212f5da0b428173f207e7ac0af SHA1 b98f0945011ddce640ab6424f7f429eb7ebdd0d1 SHA256 a6192c57819d08a5d4ff934615e230777505a4da1cde14510ef5076d0040d0de
-DIST AdobeReader_fra-8.1.3-1.i486.tar.bz2 49822822 RMD160 2e2e32db8aa203e1bc4dd894e7beafb2d4654463 SHA1 92eda79824e13911f34c35e7b65bf557c9907c60 SHA256 0d06b3b6fe1a80837d6e34117a6c6801eabe4402d1165c747f37b201e19ca4f7
-DIST AdobeReader_ita-8.1.3-1.i486.tar.bz2 49461556 RMD160 b6218bc0c2ebb5c610f52906105cabffac029482 SHA1 ca30731a60357999a9740a4a161957ae761aac28 SHA256 231d10326ba6e490e2fad2e5cb16558ee7a704480b17620f7b88256e8faab0a2
-DIST AdobeReader_jpn-8.1.3-1.i486.tar.bz2 57741189 RMD160 a34b57a5fa83c23aa9cc5d53cb18c3798f72d4a3 SHA1 2853a8695b5f9aa2ce81f4c6a9040ac7eb445695 SHA256 286db094e6cc3196f8747637811cd71f5e80526fae542f49c8b0a909b8045615
-DIST AdobeReader_kor-8.1.3-1.i486.tar.bz2 50967421 RMD160 a04a8590931c9c378420f23da9bb5eb987915773 SHA1 c240a3261ced31611a386c1253f38fd90df8dcc7 SHA256 bf69c910543bb2b0beced285843a63f8eea0c06b055018924f8b849b02b794d6
-DIST AdobeReader_nld-8.1.3-1.i486.tar.bz2 49790536 RMD160 5a09fbe8d392322029b0530034db56e22b9d69af SHA1 8e2358a407a26a38db1f77ee67fb16858ff9a5a5 SHA256 1a03680f0d222a68786544f19acedf8ae665877fa71e0efb741aa8f8e4c7be46
-DIST AdobeReader_nor-8.1.3-1.i486.tar.bz2 49788549 RMD160 ffe319adc2e7ca37a395b0e51a62b4de94e39524 SHA1 4b948479e2debc70311b2f9cea6ae92bec7ecf80 SHA256 fd9ac64c6dd8eda40aa54891f135d6880bf909d5078b41bb9974ee698415bad3
-DIST AdobeReader_ptb-8.1.3-1.i486.tar.bz2 49598922 RMD160 2721800e493a453b5c271025c953de614849f469 SHA1 8874f3931d1d95579a1e346fe798221392a50d35 SHA256 4fc8734d0220f626146ae5c98c8b3a433875a779d2d126aec4446d29f789b4ac
-DIST AdobeReader_suo-8.1.3-1.i486.tar.bz2 49681666 RMD160 69be61196f603cb88276ad6172543cb21dae60cf SHA1 9dd20550d95c9ba5d6188b6e679ae2f46e2b52f3 SHA256 6c06b7dea872bd3ce625a5d7ecb607ab8b981c2209e137874a2892142d88dcc6
-DIST AdobeReader_sve-8.1.3-1.i486.tar.bz2 50519768 RMD160 3f755791922e9533434e9ab86ed0409ce34d61d5 SHA1 ab1ac2119832aa186dd019e386923f5ec021f721 SHA256 b2a2f9f5ce3cef8d0704961f509cc097d103bb3205e706caff82bc249bdc4eca
-EBUILD acroread-8.1.3.ebuild 8154 RMD160 e0bb332c2220ace712957a9c6e98610096566d04 SHA1 711d7c5a38f4aa4e7bb9587efebbc0558fffd9d2 SHA256 c8e1f4025960c8441ab7966bdbcdded05de807e97d98d402808f2451c09bf3b5
-EBUILD acroread-9.1.0.ebuild 8028 RMD160 cb24b38e3f15bbce3a739866c0cbc04e382d9951 SHA1 8d9d2d9ffaae6b220209c19b9c3f73b28c3e4c64 SHA256 a5e206e38077d69d032d5adbdad5d1b683dfb10450ec8e23a81d532042c031ed
-MISC ChangeLog 22402 RMD160 a5f234c3b7b74f9cbb2986a655d39339eb3281a8 SHA1 15d85dafc6cb13cebb337cab5a669dd7980cd74a SHA256 60f7265eb8fc88a843a6a0230d420cc135bf6d3c50d1ea390d3dc53c904db1dd
+DIST AdbeRdr9.1.2-1_i486linux_deu.tar.bz2 65727420 RMD160 efd9c6a065e0f06f6ad91e394718b516b4c49bf4 SHA1 16940db06581862688e2507622d5a4fc129c1175 SHA256 8c58b3b761ef865ddcc75527e69a0879dc86fca7668aacd1471faa97df95ee2f
+DIST AdbeRdr9.1.2-1_i486linux_enu.tar.bz2 60074973 RMD160 4afb206648faf3e0e39e4583a2a84bb79f7702d3 SHA1 7e56534462c5fb48a5038890f166ed13b6ac5727 SHA256 ab1dbda5c2af1f30bd82d4eb3e0a0f4a0c3ace97634b3b10eec8dfcbbea099d2
+DIST AdbeRdr9.1.2-1_i486linux_fra.tar.bz2 64530111 RMD160 8f5d9c69c768a9f803927a8c21fe92c4433e2ff1 SHA1 b5f2aafcec5aa835067d0713c296a48bd6bbb186 SHA256 e94456808939a83ca1c79cb92a7c719cfa3f1ed26ec9958811ab53252485b25b
+DIST AdbeRdr9.1.2-1_i486linux_jpn.tar.bz2 68423341 RMD160 794a03883a73da4175ca98740e799c6f2c8ec4c3 SHA1 52086b4cf78a113f5e644b00c6ac2df97f939062 SHA256 a23e352249fbcc563e82f617a9efa92854b5af85877f884f3fae4bf80f44265c
+EBUILD acroread-9.1.2.ebuild 8032 RMD160 7b78f1eb8b9b1e9cd3da5ede90d5faf38a4bbd47 SHA1 19b62c949289985a55bc26b9d35dbc7f95f1e8cf SHA256 483d02a6d53501ecc5ba3bd968580a622d092638beb3fe49e512a37a0f274db1
+MISC ChangeLog 22673 RMD160 58b12ea1aa8f332a2918a9c0804df7dec7d17c00 SHA1 f267d0a90a509fada643b8b51472137da891d2d4 SHA256 cd183514f7b6808132055d8e7953bac9e222d346c9bab06e6df599f33c6cb34f
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
