@@ -1,6 +1,13 @@
 # ChangeLog for app-text/acroread
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.126 2009/04/14 10:25:16 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.127 2009/06/17 23:35:11 tgurr Exp $
+
+*acroread-9.1.2 (17 Jun 2009)
+*acroread-8.1.6 (17 Jun 2009)
+
+  17 Jun 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.3.ebuild,
+  +acroread-8.1.6.ebuild, -acroread-9.1.0.ebuild, +acroread-9.1.2.ebuild:
+  Version bumps fixing security issues, see bug #267846 and #273908.
 
   14 Apr 2009; Raúl Porcel <armin76@gentoo.org> acroread-8.1.4.ebuild:
   x86 stable wrt #259992
